# Laura

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
Laura/: CMakeLists.txt  lrpch.h
Laura/Assets/: MeshLoader.h  TextureLoader.cpp
Laura/CameraOld/: CameraHandler.cpp  CameraHandler.h  CameraOld.cpp  CameraOld.h
Laura/Components/: Camera.cpp  Camera.h  MeshComponent.h  SkyboxComponent.cpp  SkyboxComponent.h  TransformComponent.cpp  TransformComponent.h
Laura/Entity/: Environment.h
Laura/Geometry/: Sphere.h  Triangle.h
Laura/ObjParser/: ObjParser.cpp  ObjParser.h
Laura/camera/: Camera.cpp  Camera.h  CameraHandler.h  CameraOld.cpp  CameraOld.h
Laura/core/: Log.h  application.cpp  application.h
Laura/events/: KeyCodes.h
Laura/platform/OpenGL/: OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLComputeTexture.cpp  OpenGLComputeTexture.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.h  OpenGLUniformBuffer.h
Laura/platform/OpenGL/shaders/: OpenGLComputeShader.cpp  OpenGLComputeShader.h
Laura/platform/windows/: GLFWWindow.cpp
Laura/renderer/: IComputeShader.cpp  IComputeShader.h  IImage2D.cpp  IRendererAPI.cpp  IRendererAPI.h  IRenderingContext.cpp  IShaderStorageBuffer.cpp  IShaderStorageBuffer.h  ITexture.cpp  ITexture.h  IUniformBuffer.cpp  IUniformBuffer.h  Material.h  Renderer.cpp  Renderer.h  RendererOld.cpp  RendererOld.h
Laura/res/Shaders/: PathTracing.comp
Laura/src/: EngineCfg.h  Laura.h  LauraEntrypoint.h  lrpch.h
Laura/src/Assets/: AssetManager.cpp  AssetManager.h  AssetTypes.h  Assets.cpp  Assets.h  BVHAccel.cpp  BVHAccel.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.h
Laura/src/Components/: Camera.h  MaterialComponent.h  MeshComponent.h  SkyboxComponent.cpp  SkyboxComponent.h  TransformComponent.h
Laura/src/Core/: Entrypoint.h  GUID.cpp  GUID.h  IWindow.cpp  IWindow.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiContextManager.cpp  ImGuiContextManager.h  ImGuiLayer.cpp  ImGuiLayer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  application.cpp  application.h
Laura/src/Core/Events/: Events.h  IEvent.h  KeyCodes.h  KeyEvents.h  MouseCodes.h  MouseEvents.h  RenderEvents.h  SceneEvents.h
Laura/src/Core/Layers/: ILayer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp  RenderLayer.h  SceneLayer.cpp  SceneLayer.h
Laura/src/Entity/: Environment.cpp  Environment.h
Laura/src/Export/: ExportSettings.cpp  ExportSettings.h  ExportUtilities.cpp  ExportUtilities.h
Laura/src/Platform/OpenGL/: OpenGLComputeShader.cpp  OpenGLComputeShader.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLImage2D.cpp  OpenGLImage2D.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLdebugFuncs.cpp  OpenGLdebugFuncs.h
Laura/src/Platform/Windows/: GLFWWindow.cpp  GLFWWindow.h
Laura/src/Project/: ProjectManager.cpp  ProjectManager.h  ProjectUtilities.h
Laura/src/Project/Assets/: AssetManager.cpp  AssetManager.h  AssetTypes.h  Assets.h  BVHAccel.cpp  BVHAccel.h
Laura/src/Project/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Laura/src/Renderer/: IComputeShader.cpp  IComputeShader.h  IImage2D.h  IRendererAPI.cpp  IRendererAPI.h  IRenderingContext.h  IShaderStorageBuffer.h  ITexture2D.cpp  ITexture2D.h  IUniformBuffer.h  RenderSettings.h  Renderer.cpp  Renderer.h
Laura/src/Renderer/BVH/: BVHBuilder.h
Laura/src/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManager.md  Skybox.cpp
LauraEditor/: CMakeLists.txt
LauraEditor/res/: DefaultLight.lrtheme  EditorState.yaml  EditorStatePersistent.yaml  crazy.lrtheme  imgui.ini  invalid_test.lrtheme
LauraEditor/res/Models/: imgui.ini
LauraEditor/src/: EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  EditorState.cpp  EditorState.h  EditorTheme.cpp  EditorTheme.h  ImGuiContext.cpp  ImGuiContext.h  LauraEditor.cpp
LauraEditor/src/EditorUI/: DNDPayloads.h  InspectorPanel.cpp  InspectorPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  UtilityUI.cpp  UtilityUI.h  ViewportPanel.cpp  ViewportPanel.h
LauraRuntime/: CMakeLists.txt
LauraRuntime/src/: LauraRuntime.cpp  RuntimeLayer.cpp  RuntimeLayer.h
LegacyCode/include/GUI/: CameraComponentGUI.h  DockspaceGUI.h
LegacyCode/src/GUI/: CameraComponentGUI.cpp  SkyBoxGUI.cpp
LegacyCode/src/Scenes/: Scene1.cpp
app/include/GUI/: BVHsettingsGUI.h  CameraComponentGUI.h  PerformanceCounterGUI.h  SceneHierarchyGUI.h  SkyBoxGUI.h
app/include/scenes/: Scene1.hpp
app/resources/models/: .gitignore
app/resources/skyboxes/: imgui.ini
app/src/: SandboxApp.cpp  application.cpp  entryPoint.cpp  main.cpp
app/src/GUI/: BVHsettingsGUI.cpp  CameraComponentGUI.cpp  DockspaceGUI.cpp  PerformanceCounterGUI.cpp
app/src/Scenes/: Scene1.cpp
core/: CMakeLists.txt
core/include/: Renderer.h  testcore.h
core/include/ObjParser/: ObjParser.h
core/include/core/: IWindow.h  Log.h  Renderer.h  application.h  application_test.h  events.h
core/include/gl_util/: ComputeTexture.h
core/resources/shaders/: ComputeRayTracing.comp
core/src/: ImGuiLayer.cpp  Renderer.cpp  application.cpp  application_test.cpp  events.cpp
core/src/ObjParser/: ObjParser.cpp
core/src/camera/: Camera.cpp  CameraHandler.cpp
core/src/gl_util/: ComputeShader.cpp  ComputeTexture.cpp  OpenGLdebugFuncs.cpp
include/: demoShader.h  openglDebug.h
platform/windows/: GLFWWindow.cpp  GLFWWindow.h
src/: main.cpp
(+43 files in other folders)
